@@ -1,3 +1,7 @@
+2007-01-31  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* ijbridge.tcl: Added some statistics recording.
+
 2006-11-29  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* ibridge.tcl: Fix ircbridge nicks.
